(fix): points does not cut off on firefox

--- a/app/src/modules/wire/channel/channel.component.scss
+++ b/app/src/modules/wire/channel/channel.component.scss
@@ -133,7 +133,7 @@ m-wire-channel {
     letter-spacing: 1px;
 
     > input {
-      width: 60%;
+      width: 50%;
       padding: $minds-padding / 2;
       margin-left: $minds-margin * 1.5;
       font-family: inherit;
